fix(dashboard): fix logo visibility

--- a/src/app/pages/tndm-dashboard/tndm-dashboard.scss
+++ b/src/app/pages/tndm-dashboard/tndm-dashboard.scss
@@ -54,6 +54,7 @@ tndm-leaderboard-widget {
 
 .logo {
   max-width: 80px;
+  height: auto;
 }
 
 .is-expanded {
